--- a/packages/crud/package.json
+++ b/packages/crud/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@cool-vue/crud",
-	"version": "7.2.7",
+	"version": "7.2.10",
 	"private": false,
 	"main": "./dist/index.umd.min.js",
 	"typings": "types/index.d.ts",
@@ -14,10 +14,9 @@
 		"@element-plus/icons-vue": "^2.3.1",
 		"array.prototype.flat": "^1.2.4",
 		"core-js": "^3.21.1",
-		"element-plus": "^2.8.3",
 		"lodash-es": "^4.17.21",
 		"mitt": "^3.0.1",
-		"vue": "^3.5.6"
+		"vue": "^3.5.13"
 	},
 	"devDependencies": {
 		"@types/array.prototype.flat": "^1.2.1",
@@ -30,7 +29,8 @@
 		"prettier": "^3.1.0",
 		"sass": "^1.55.0",
 		"sass-loader": "^12.6.0",
-		"typescript": "^5.3.3"
+		"typescript": "^5.3.3",
+		"element-plus": "^2.9.1"
 	},
 	"files": [
 		"dist",
